welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:21: error: illegal start of simple expression
      while(var k:Int=0<repetition){
            ^golomb:25: error: ')' expected but '}' found.
      }
      ^golomb:30: error: Unmatched closing brace '}' ignored here
 }
 ^